# pdf-insight

./: CLAUDE.md  DESIGN.md  docker-compose.yml
.kiro/steering/: product.md  structure.md  tech.md
client/: package.json
client/app/: app.css  root.tsx  routes.ts
client/app/lib/: api.ts
client/app/routes/: documents.tsx  index.tsx  search.tsx  upload.tsx
docs/: INDEX.md  api-design.md  architecture-philosophy.md  database-design.md  domain-design.md  git-workflow.md  project-overview.md  specs.md  tasks.md  tech-stack.md
server/: main.py  pyproject.toml
server/app/: dependencies.py  main.py  schemas.py
server/app/api/: chat.py  pdf.py
server/app/core/: config.py
server/app/services/: chat_service.py  embedding_service.py  pdf_service.py  storage_service.py  vector_store_service.py
